# XRConverters

./: .gitignore  README.md  extract_model.py  formats.md  pyproject.toml
Blender Addon/: xac_importer_addon.py
Hrr Archive/Dropbox Dump/: Noesis_3d_xac_importer.py
X4Converters/: CMakeLists.txt
X4Converters/XRConverters/: StdInc.h  XRConverters.vcxproj.filters  dll.cpp
X4Converters/XRConverters/Util/: AssimpCompat.cpp  AssimpCompat.h  BinaryReader.h  BinaryWriter.h
X4Converters/XRConverters/Xac/: ActorFile.cpp  XacExporter.cpp  XacExporter.h  XacImporter.cpp
X4Converters/XRConverters/Xmf/: XmfExporter.cpp  XmfExporter.h
X4Converters/XRConvertersMain/: Resources.rc  StdInc.h  XRConvertersMain.aps  XRConvertersMain.vcxproj
X4Converters/include/: compat_directx.h
XRConvertersBuild/: XRConverters.h
XRConvertersSrc/XRConverters/: Resources.aps  XRConverters.vcxproj
XRConvertersSrc/XRConverters/Xmf/: XmfExporter.cpp
XRConvertersSrc/XRConvertersMain/: Resources.aps  XRConvertersMain.vcxproj.filters
arc_ Archive/Reverse-Engineered File Specs/: xac.txt
archive/Hrr Archive/Dropbox Dump/: README.txt
archive/XRConvertersSrc/: XRConverters.sln
archive/XRConvertersSrc/XRConverters/: Resources.rc
archive/XRConvertersSrc/XRConverters/Util/: BinaryWriter.h
archive/XRConvertersSrc/XRConverters/Xac/: ActorFile.cpp
archive/arc_ Archive/Reverse-Engineered File Specs/: anark.txt  lua.txt
pyconverter/: __init__.py  main.py
src/XRConverters/: StdInc.h  dll.cpp  exports.def
src/XRConverters/Xmf/: XmfExporter.h
src/XRConvertersMain/: StdInc.h  main.cpp
tools/: inspect_jcs.py  parse_jcs.py
