[project]
name = "xrconverters"
version = "0.1.0"
description = "Archive and possible revival of Blender extraction tools for EgoSoft X-games"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pyassimp>=5.2.5",
    "pycollada>=0.9.2",
    "pytest>=8.4.1",
    "rich>=14.1.0",
]

[project.scripts]
importxmf = "xrconverters.importxmf:main"

